frontend/tests/regression/illtyped/ty-var-clashes.gr
data Foo a b where
  Bar : forall a : Type, b : Type . a -> b -> Foo a
